# minipl-interpreter

./: .gitignore  CMakeLists.txt  README.md
data/: boolexpr.mpl  expression.mpl  sample2.mpl  string_with_escape_characters.txt
documentation/: accounting.md
src/: ASTNodes.cpp  ASTNodes.h  CMakeLists.txt  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  a.out  main.cpp
